# sha3-circuit

./: .gitignore  Cargo.toml  README.md
benches/: sha3_preimage.rs
docs/: aux_lc_subconfig.md  bootstrap_subconfig.md  bytes_to_spread_subconfig.md  decomposition_subconfig.md  intro.md  keccakf.md  keecak_operations_subconfig.md  lookup.md  techniques.md
examples/: hash_chain.rs
src/: constants.rs  instructions.rs  lib.rs  sha3_256_gadget.rs
src/packed_chip/: mod.rs
src/packed_chip/auxiliary_lc/: mod.rs  tests.rs
src/packed_chip/bootstrap/: assign_bootstrap.rs  mod.rs  tests.rs
src/packed_chip/bytes_to_spread/: assign_bytes_to_spread.rs  mod.rs  tests.rs
src/packed_chip/decomposition/: decompose_spread.rs  gates.rs  mod.rs  rotation.rs  types.rs
src/packed_chip/decomposition/tests/: mod.rs  test_lc.rs  test_rotations.rs  test_spread.rs
src/packed_chip/keccakf_operations/: compute_chi.rs  compute_iota.rs  compute_theta_rho.rs  mod.rs  types.rs
src/packed_chip/keccakf_operations/tests/: compute_keccak_step.rs  compute_keccakf.rs  mod.rs
src/packed_chip/utils/: mod.rs  tests.rs
tests/: sha3_preimage.rs
