[package]
name = "sha3-circuit"
authors = ["Alexandros Zacharakis"]
version = "0.1.0"
edition = "2021"
description = "Lookup based midnight-proofs (halo2 fork) implementation of keccak-f[1600] permutation and gadgets for the sha3-256 and keccak-256 hash functions."
readme = "README.md"
license = "Apache-2.0"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs", "sha3", "keccak"]

[dependencies]
# temporary import of midnight-proofs, for the whole project to compile. Will be updated using the syntax commented below (with the correct tag) once the latest tag is out.
midnight-proofs = { path = "../midnight-zk/proofs", default-features = false, features = [
  "circuit-params",
  "committed-instances",
] }
midnight-curves = { path = "../midnight-zk/curves", default-features = false }
# midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk", branch = "main", default-features = false, features = [
#   "bits",
#   "circuit-params",
#   "committed-instances",
# ] }
# midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk", tag = "midnight-proofs-v0.5.1", default-features = false, features = [
#   "bits",
#   "circuit-params",
#   "committed-instances",
# ] }
num-bigint = { version = "0.4" }
rand = "0.8"
blake2b_simd = "1.0.3"
ff = "0.13"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.3.1"
sha3 = "0.10.0"

[[bench]]
name = "sha3_preimage"
harness = false
