[package]
name = "sha3-circuit"
authors = ["Alexandros Zacharakis"]
version = "0.1.0"
edition = "2021"
description = "Lookup based midnight-proofs (halo2 fork) implementation of keccak-f[1600] permutation and gadgets for the sha3-256 and keccak-256 hash functions."
readme = "README.md"
license = "Apache-2.0"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs", "sha3", "keccak"]

[dependencies]
midnight-curves = { git = "https://github.com/midnightntwrk/midnight-zk.git", tag = "midnight-curves-v0.2.0" }
midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk.git", tag = "midnight-proofs-v0.6.0", default-features = false, features = [
  "circuit-params",
  "committed-instances",
] }
num-bigint = { version = "0.4" }
rand = "0.8"
blake2b_simd = "1.0.3"
ff = "0.13"

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.3.1"
sha3 = "0.10.0"

[[bench]]
name = "sha3_preimage"
harness = false
